/stats endpoint has been added
