# handlers/stats.js
@@ -1,0 +1,9 @@
+'use strict';
+
+function stats(request, reply) {
+  reply.view('stats', {
+    title: 'Statistics',
+  });
+}
+
+module.exports = stats;
